create country selection

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,12 @@
       <p class="inputs_country">
         <label for="country">Select country:</label>
         <select name="country" id="country"> 
-          <option value="1">1</option>
+          <option value="Croatia">Croatia (Hrvatska)</option>
+          <option value="Bosnia and Herzegowina">Bosnia and Herzegowina</option>
+          <option value="Slovenia">Slovenia</option>
+          <option value="Serbia">Serbia</option>
+          <option value="Macedonia">Macedonia</option>
+          <option value="Monte Negro">Monte Negro</option>
         </select>
         <span class="input_error input_error_hidden"></span>
       </p>
