add zipcode validation

--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
       </p>
       <p class="inputs_zipcode">
         <label for="zipcode">ZIP code:</label>
-        <input type="text" name="zipcode" id="zipcode">
+        <input type="text" name="zipcode" id="zipcode" pattern="^[0-9]+$" required>
         <span class="input_error input_error_hidden"></span>
       </p>
       <p class="inputs_password">
