--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
       </p>
       <p class="inputs_password">
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password" pattern="^(?=.*\d).{4,8}$" required>
         <span class="input_error input_error_hidden"></span>
       </p>
       <p class="inputs_password_confirmation">
