add submit button validation, add input fields validation styling

--- a/src/template.html
+++ b/src/template.html
@@ -41,7 +41,7 @@
         <span class="input_error input_error_hidden"></span>
       </p>
       <p class="form_submit_button">
-        <button>SUBMIT</button>
+        <button id="submit_form">SUBMIT</button>
         <span class="input_error input_error_hidden"></span>
       </p>
     </form>
